# vm_m4

./: .gitignore  CMakeLists.txt  README.md  SharemindVmM4Config.cmake.in  SharemindVmM4ConfigVersion.cmake.in  config.local.example
doc/: bytecode.md
m4/: datatypebyte.m4  dispatches.m4  foreach.m4  forloop.m4  instr.m4  instruction_index.m4  operandlocationbyte.m4  preprocess_pass2_functions.m4  product.m4  static_label_structs.m4  stats.m4
m4/gnu_m4_examples/: foreachq4.m4
src/m4/: Makefile_for_m4  a  datatypebyte.m4  dispatches.m4  foreach.m4  forloop.m4  instr.m4  instruction_args_cases.m4  instruction_from_code_cases.m4  instruction_from_name_cases.m4  instruction_index.m4  instruction_name_cases.m4  instruction_structs.m4  m4.pro  operandlocationbyte.m4  preprocess_pass1_cases.m4  preprocess_pass2_cases.m4  preprocess_pass2_functions.m4  print.m4  product.m4  sample.m4  static_label_structs.m4  stats.m4
src/sharemind/: CMakeLists.txt
src/sharemind/m4/: .gitignore  datatypebyte.m4  dispatches.m4  instr.m4  instruction_index.m4  instruction_structs.m4  static_label_structs.m4  stats.m4
